# krachkiste_esp32

./: .clang-format  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Makefile  README  README.md  pyproject.toml  tox.ini  version.txt
.esp/: .gitignore
.github/: dependabot.yml
.github/workflows/: ci-default.yml
.python-requirements/: documentation.txt
docs/source/: Doxyfile  conf.py  index.rst
docs/source/api/: index.rst  mnet32.rst
docs/source/api/app/: index.rst  main_c.rst
docs/source/api/lib/: index.rst
docs/source/api/lib/networking/: index.rst  networking_c.rst  networking_h.rst  wifi_ap_c.rst  wifi_ap_h.rst
docs/source/api/lib/wifi_management/: index.rst  wifi_management_c.rst
docs/source/development/: index.rst
main/: main.c
requirements/apt/: linters.txt
requirements/python/: util.txt
src/app/: CMakeLists.txt  main.c
src/lib/embedded_audioplayer_esp32/: CMakeLists.txt
src/lib/embedded_audioplayer_esp32/include/map32/: map32.h
src/lib/embedded_audioplayer_esp32/src/: map32.c
src/lib/embedded_networking_esp32/: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.rst
src/lib/embedded_networking_esp32/include/mnet32/: mnet32.h
src/lib/embedded_networking_esp32/include/networking/: networking.h
src/lib/embedded_networking_esp32/src/: mnet32.c  mnet32_internal.h  mnet32_nvs.c  mnet32_nvs.h  mnet32_state.c  mnet32_state.h  mnet32_web.c  mnet32_web.h  mnet32_wifi.c  mnet32_wifi.h  networking.c  networking_internal.h  networking_state.h  networking_web.c  networking_wifi.c  networking_wifi.h  wifi_config.src.html
src/lib/min_httpd/: CMakeLists.txt  min_httpd.c  min_httpd.h
src/lib/min_httpd/include/min_httpd/: min_httpd.h
src/lib/min_httpd/src/: home.src.html  min_httpd.c
src/lib/networking/: .gitignore  CMakeLists.txt  networking.c  networking.h  networking_p.h  networking_web.c  networking_web.h  wifi.c  wifi.h  wifi_ap.c  wifi_ap.h
src/lib/networking/include/: networking.h
src/lib/networking/include/networking/: networking.h
src/lib/networking/src/: networking.c  networking_internal.h  networking_state.c  networking_state.h  networking_web.h  networking_wifi.c  networking_wifi.h  wifi.c  wifi.h  wifi_config.src.html
src/lib/wifi_management/: CMakeLists.txt  wifi_management.c  wifi_management.h
tools/cmake/: create_python_venv.cmake  minimizer.cmake
tools/minimizer/: html.py
